# platform-golanag

./: .gitignore  Five_microservice.md  aggregator.docx  generate_config.py  golang.docx  infrastructure-metrics-guide.md  linux.md  raas and paymentapi.docx  server.err  trex.md  trex1.md  trex_combined.md  ~$golang.docx  ~WRL2493.tmp
1booking-golang/: .gitignore
1booking-golang/backend/: Dockerfile  go.mod  go.sum
1booking-golang/frontend/: package.json
1booking-golang/frontend/app/: page.tsx
1booking-golang/frontend/types/: index.ts
1booking-golang/notes/: db.md  env.md
1booking-typescript/: .env.example  .eslintrc.json  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  jest.config.js  package.json  tsconfig.build.json  tsconfig.json  tsdoc.json  tsup.config.ts
1booking-typescript/src/: index.ts
1booking-typescript/src/clients/: postgres.client.ts  redis.client.ts  stripe.client.ts
1booking-typescript/src/config/: database.config.ts  index.ts  redis.config.ts
1booking-typescript/src/constants/: index.ts  roles.ts
1booking-typescript/src/controllers/: auth.controller.ts  community.controller.ts  housing.controller.ts  marketplace.controller.ts  user.controller.ts
1booking-typescript/src/errors/: AppError.ts  errorCodes.ts
1booking-typescript/src/jobs/: queue.ts
1booking-typescript/src/middleware/: auth.ts  cors.ts  errorHandler.ts  notFound.ts  rateLimiter.ts  requestId.ts
1booking-typescript/src/repositories/: community.repository.ts  housing.repository.ts  index.ts  marketplace.repository.ts  service.repository.ts  user.repository.ts
1booking-typescript/src/routes/: auth.routes.ts  community.routes.ts  housing.routes.ts  index.ts  marketplace.routes.ts  user.routes.ts
1booking-typescript/src/schemas/: auth.schema.ts  index.ts  (+6 more)
1booking-zspringjava/: pom.xml  readme.md
1connectme11golang/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  feature1.md
1connectme11golang/backend/: go.mod  go.sum
1connectme11golang/frontend/: Dockerfile  tsconfig.json
1golang-oop/13sidecar/: README.md
1golang-oop/1managmentofall/: README.md
1golang-oop/1taskmanager/: .env.example  Dockerfile  README.md  go.mod
1golang-oop/2contact-book/: .env.example  README.md  go.mod  go.sum
1golang-oop/2http-cli-user-management/: README.md
1golang-oop/6reverse-proxy/: README.md
1golang-oop/8rate-limiter/: README.md
1golang-oop/9Service Discovery/: 1.m
1golang-oop/infrastructure-provisioning-api/: README.md
1linux/: cpu.md  linux-storage-interview-guide.md
1terraform/: tf.md
1terraform/1/: .terraform.lock.hcl  1.md  main.tf  output.tf  variables.tf
1terraform/2/: 2.md
2-golang-linux/: README.md
2go_gladiator/: Dockerfile  README.md  client_wrapper.py  config_containers.sh  http3_client.conf  index.html  navbar.md
2go_gladiator/docs/: class_view.plantuml  sequence.plantuml  system_view.plantuml  use_case.plantuml
2go_gladiator/http-service/: README.md  build.sh
2go_gladiator/src/comm/: CMakeLists.txt  Config.cc  FlatBuffer.cc  HttpRequest.cc  PM.cc  PM.h  Request.h  debug.cc  debug.h  network.h
2go_gladiator/src/http3_server/: CMakeLists.txt  server.cc  tls_server_context.h  tls_server_context_quictls.h
2go_gladiator/utest/: CMakeLists.txt  main.cc  test_flatbuffer.cc
2nilopay222golang/: .env.example  README.md
2nilopay222golang/backend/: Dockerfile  tsconfig.json
2nilopay222golang/mobile/: pubspec.yaml
2nilopay222golang/web/: package.json
3booking-golang/: README.md
3booking-golang/backend/: Dockerfile  go.mod  go.sum
3booking-golang/frontend/: next.config.js  tailwind.config.ts
3booking-golang/notes/: db.md  env.md
3go_shell_navigator/: readme.md
3go_shell_navigator/mvp1/: main.py  mock_server.py  shells.py  test_host_key  transport.py
3niloremittance222golang/: .gitignore  docker-compose.yml
3niloremittance222golang/backend/: package.json
3niloremittance222golang/web/: next.config.js  tailwind.config.ts
4Golang_product/Fin-tech/: readme.md
4Golang_product/bakery/: go.mod
4Golang_product/exercies/: go.mod
4Golang_product/generic_type/: go.mod
4Golang_product/go-cal/: go.mod
4Golang_product/helloworld1/: go.mod  readme.md
4Golang_product/helloworld2/: helper.go  main.go  readme.md
4Golang_product/helloworld3/: go.mod
4Golang_product/project1/: go.mod
4go_distributed-task-queue/: README.md
Golang_course/: GO_READ.md
Golang_course/channels/: channel.go
Golang_course/generic_type/: main.go
Golang_course/go-cal/: main.go
Golang_course/helloworld1/: main.go
Golang_course/helloworld2/: go.mod
gladiator-go/: CMakeLists.txt  README_wrapper.md  client_autoconfig_st.sh  http3_server.conf  openapi-client.json  server_autoconfig_st.sh
gladiator-go/docs/: design.md
gladiator-go/extra/config/: ca_bundle.crt  certificate.crt  dnsmasq.conf  private.key
gladiator-go/http-service/: Dockerfile  go.mod  go.sum
gladiator-go/http-service/cmd/http-server/: main.go
gladiator-go/http-service/internal/common/: common.go
gladiator-go/http-service/internal/server/: server.go
gladiator-go/src/comm/: Config.h  FlatBuffer.h  HttpRequest.h  Request.cc  http_parser.h  network.cc  template.h  tls_session_base_quictls.h  util.cc  util.h
gladiator-go/src/http3_server/: server.h  server_base.h  tls_server_session.h
gladiator-go/src/masque_client/: CMakeLists.txt  CliOptionParser.h  FdWatcher.cc  IPAllocator.cc  InnerLayer.cc  MasqueClient.cc  PvdClient.h  QuicConnection.h  TimerWatcher.h  TransportLayer.cc  UdpLayer.cc  tls_client_context_quictls.cc  tls_client_context_quictls.h  tls_client_session_quictls.h
gladiator-go/src/workers/: BaseJob.h  CMakeLists.txt  Worker.cc
gladiator-go/utest/: test_ipv4_pool.cc
go_distributed-locking-service/: README.md
go_shell_navigator/mvp1/: navigator.py  prompt_detector.py
kafka-event-streaming-platform/: README.md
kubernetes-operator/: README.md
linux/: 1linux.md
simulators/: .golangci.yml  go.mod  go.sum  ruleset2.0.yaml
system Backbase/: 2zellij.config  3characteriz.md  inject.md  realability.md  system.md
(+684 files in other folders)
